--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"debug": "^4.3.4",
 		"dotenv": "^16.0.1",
 		"express": "^4.18.1",
+		"express-mongo-sanitize": "^2.2.0",
 		"faker": "^6.6.6",
 		"jsonwebtoken": "^8.5.1",
 		"mongodb-memory-server": "^8.5.2",
